--- a/pdf-reader/Base.lproj/Main.storyboard
+++ b/pdf-reader/Base.lproj/Main.storyboard
@@ -49,7 +49,13 @@
                         </constraints>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="PDF Reader" id="mOI-FS-AaM"/>
+                    <navigationItem key="navigationItem" title="PDF Reader" id="mOI-FS-AaM">
+                        <barButtonItem key="rightBarButtonItem" image="collection" id="tZW-Wv-Jnk">
+                            <connections>
+                                <segue destination="Jks-ba-5Dt" kind="presentation" identifier="showOverview" id="b4k-Bq-ssi"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="webview" destination="1rz-vj-9um" id="hMq-L7-5bN"/>
                     </connections>
@@ -57,6 +63,71 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="689" y="129"/>
+        </scene>
+        <!--Document overview-->
+        <scene sceneID="vSs-DY-0vc">
+            <objects>
+                <collectionViewController id="fOA-V5-com" customClass="PDFOverviewViewController" customModule="pdf_reader" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="c4Q-W8-e4s">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="kpp-t8-zIJ">
+                            <size key="itemSize" width="121" height="156"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCell" id="c9W-Ho-9DV" customClass="ImageCell" customModule="pdf_reader" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="121" height="156"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="121" height="156"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="70o-zf-f0o">
+                                            <rect key="frame" x="0.0" y="0.0" width="121" height="156"/>
+                                            <animations/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cb9-IH-KTR">
+                                            <rect key="frame" x="53" y="60" width="14" height="36"/>
+                                            <animations/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <animations/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="70o-zf-f0o" firstAttribute="top" secondItem="c9W-Ho-9DV" secondAttribute="top" id="0pP-S3-ePC"/>
+                                    <constraint firstAttribute="bottom" secondItem="70o-zf-f0o" secondAttribute="bottom" id="GcP-UG-gKa"/>
+                                    <constraint firstItem="Cb9-IH-KTR" firstAttribute="centerX" secondItem="c9W-Ho-9DV" secondAttribute="centerX" id="PMh-jL-5ZP"/>
+                                    <constraint firstItem="70o-zf-f0o" firstAttribute="leading" secondItem="c9W-Ho-9DV" secondAttribute="leading" id="RL8-eZ-ZzH"/>
+                                    <constraint firstAttribute="trailing" secondItem="70o-zf-f0o" secondAttribute="trailing" id="nuz-II-dWF"/>
+                                    <constraint firstItem="Cb9-IH-KTR" firstAttribute="centerY" secondItem="c9W-Ho-9DV" secondAttribute="centerY" id="pKL-H8-LGs"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="imageView" destination="70o-zf-f0o" id="Cql-BN-3Sn"/>
+                                    <outlet property="pageLabel" destination="Cb9-IH-KTR" id="aiO-IF-eAy"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="fOA-V5-com" id="YoB-wF-k0C"/>
+                            <outlet property="delegate" destination="fOA-V5-com" id="7FI-EH-dP8"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Document overview" id="HNl-y9-Yg2"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lCe-gU-SwU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2266" y="129"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="Nki-YV-4Qg">
@@ -113,7 +184,7 @@
                             <outlet property="delegate" destination="7bK-jq-Zjz" id="RA6-mI-bju"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Master" id="Zdf-7t-Un8"/>
+                    <navigationItem key="navigationItem" title="PDF Documents" id="Zdf-7t-Un8"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
             </objects>
@@ -135,7 +206,29 @@
             </objects>
             <point key="canvasLocation" x="-45" y="129"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="MJP-D8-aO5">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Jks-ba-5Dt" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mqk-C4-pyn">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="fOA-V5-com" kind="relationship" relationship="rootViewController" id="cG6-pa-TOt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vnP-z8-m1e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1454" y="129"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="collection" width="20" height="20"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="6S0-TO-JiA"/>
     </inferredMetricsTieBreakers>
