Preventing excessive reload of pdf document and correcting appellations of scenes in storyboard

--- a/pdf-reader/Base.lproj/Main.storyboard
+++ b/pdf-reader/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
-        <!--Master-->
+        <!--Documents-->
         <scene sceneID="pY4-Hu-kfo">
             <objects>
-                <navigationController title="Master" id="RMx-3f-FxP" sceneMemberID="viewController">
+                <navigationController title="Documents" id="RMx-3f-FxP" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Pmd-2v-anx">
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
@@ -21,10 +21,10 @@
             </objects>
             <point key="canvasLocation" x="-38" y="-630"/>
         </scene>
-        <!--Detail-->
+        <!--Reader-->
         <scene sceneID="yUG-lL-AsK">
             <objects>
-                <viewController title="Detail" id="JEX-9P-axG" customClass="PDFReaderViewController" customModule="pdf_reader" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Reader" id="JEX-9P-axG" customClass="PDFReaderViewController" customModule="pdf_reader" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="SYR-Wa-9uf"/>
                         <viewControllerLayoutGuide type="bottom" id="GAO-Cl-Wes"/>
@@ -65,10 +65,10 @@
             </objects>
             <point key="canvasLocation" x="689" y="129"/>
         </scene>
-        <!--Document overview-->
+        <!--Overview-->
         <scene sceneID="vSs-DY-0vc">
             <objects>
-                <collectionViewController id="fOA-V5-com" customClass="PDFOverviewViewController" customModule="pdf_reader" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController title="Overview" id="fOA-V5-com" customClass="PDFOverviewViewController" customModule="pdf_reader" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="c4Q-W8-e4s">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -143,10 +143,10 @@
             </objects>
             <point key="canvasLocation" x="-856" y="-330"/>
         </scene>
-        <!--Master-->
+        <!--Documents-->
         <scene sceneID="smW-Zh-WAh">
             <objects>
-                <tableViewController title="Master" clearsSelectionOnViewWillAppear="NO" id="7bK-jq-Zjz" customClass="PDFListViewController" customModule="pdf_reader" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Documents" clearsSelectionOnViewWillAppear="NO" id="7bK-jq-Zjz" customClass="PDFListViewController" customModule="pdf_reader" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="r7i-6Z-zg0">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -230,6 +230,6 @@
         <image name="collection" width="20" height="20"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="6S0-TO-JiA"/>
+        <segue reference="Tll-UG-LXB"/>
     </inferredMetricsTieBreakers>
 </document>
